--- a/wp-content/themes/wp-starter/parts/header.html
+++ b/wp-content/themes/wp-starter/parts/header.html
@@ -1,5 +1,5 @@
 <!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignwide header-navigation dark" style="padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)">
+<div class="wp-block-group alignwide header-navigation" style="padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)">
   <!-- wp:group {"align":"wide","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
   <div class="wp-block-group alignwide">
     <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}},"layout":{"type":"flex"}} -->
@@ -10,8 +10,10 @@
 
     <!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
     <div class="wp-block-group">
-      <!-- wp:navigation {"layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"},"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}}} /-->
-    </div>
+		<!-- wp:acf/navigation-container {"name":"acf/navigation-container","data":{"default_state":"hidden","_default_state":"field_65cbb7f8641d8","mobile_behavior":"expand","_mobile_behavior":"field_65cba1e6cda81"},"mode":"preview"} -->
+    		<!-- wp:navigation {"openSubmenusOnClick":true,"layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"},"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}}} /-->
+    	<!-- /wp:acf/navigation-container -->
+	</div>
     <!-- /wp:group -->
   </div>
   <!-- /wp:group -->
