--- a/wp-content/themes/wp-starter/parts/header.html
+++ b/wp-content/themes/wp-starter/parts/header.html
@@ -1,7 +1,7 @@
 <!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group alignwide header-navigation" style="padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)">
   <!-- wp:group {"align":"wide","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
-  <div class="wp-block-group alignwide">
+  <div class="wp-block-group alignwide relative gap-0">
     <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}},"layout":{"type":"flex"}} -->
     <div class="wp-block-group">
       <!-- wp:site-logo {"width":200,"shouldSyncIcon":true} /-->
@@ -9,7 +9,7 @@
     <!-- /wp:group -->
 
     <!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
-    <div class="wp-block-group">
+    <div class="wp-block-group lg:w-auto w-full">
 		<!-- wp:acf/navigation-container {"name":"acf/navigation-container","data":{"default_state":"hidden","_default_state":"field_65cbb7f8641d8","mobile_behavior":"expand","_mobile_behavior":"field_65cba1e6cda81"},"mode":"preview"} -->
     		<!-- wp:navigation {"openSubmenusOnClick":true,"layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"},"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}}} /-->
     	<!-- /wp:acf/navigation-container -->
