--- a/wp-content/themes/wp-starter/parts/header.html
+++ b/wp-content/themes/wp-starter/parts/header.html
@@ -3,7 +3,7 @@
   <!-- wp:group {"align":"wide","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
   <div class="wp-block-group alignwide relative gap-0">
     <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}},"layout":{"type":"flex"}} -->
-    <div class="wp-block-group">
+    <div class="wp-block-group w-3/4 md:w-auto">
       <!-- wp:site-logo {"width":200,"shouldSyncIcon":true} /-->
     </div>
     <!-- /wp:group -->
