[#67] Fixing a few things

--- a/wp-content/themes/wp-starter/parts/header.html
+++ b/wp-content/themes/wp-starter/parts/header.html
@@ -9,7 +9,7 @@
     <!-- /wp:group -->
 
     <!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
-    <div class="wp-block-group lg:w-auto w-full">
+    <div class="wp-block-group md:w-auto w-full">
 		<!-- wp:acf/navigation-container {"name":"acf/navigation-container","data":{"default_state":"hidden","_default_state":"field_65cbb7f8641d8","mobile_behavior":"expand","_mobile_behavior":"field_65cba1e6cda81"},"mode":"preview"} -->
     		<!-- wp:navigation {"openSubmenusOnClick":true,"layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"},"blockGap":"var:preset|spacing|20"},"layout":{"selfStretch":"fit","flexSize":null}}} /-->
     	<!-- /wp:acf/navigation-container -->
