--- a/wp-content/themes/wp-starter/parts/footer.html
+++ b/wp-content/themes/wp-starter/parts/footer.html
@@ -1,1 +1,11 @@
-<!-- wp:pattern {"slug":"wp-starter/footer"} /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}}},"backgroundColor":"gray-100","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group has-gray-100-background-color has-background" style="padding-top:var(--wp--preset--spacing--10);padding-right:var(--wp--preset--spacing--10);padding-bottom:var(--wp--preset--spacing--10);padding-left:var(--wp--preset--spacing--10)"><!-- wp:site-logo {"shouldSyncIcon":true} /-->
+
+<!-- wp:spacer {"width":"0px","style":{"layout":{"flexSize":"100px","selfStretch":"fixed"}}} -->
+<div style="height:100px;width:0px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
+<!-- wp:acf/navigation-container {"name":"acf/navigation-container","data":[],"mode":"preview"} -->
+<!-- wp:navigation {"overlayMenu":"never"} /-->
+<!-- /wp:acf/navigation-container --></div>
+<!-- /wp:group -->
